--- a/app/src/main/res/layout/row_feed.xml
+++ b/app/src/main/res/layout/row_feed.xml
@@ -36,7 +36,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textTitle"
         android:layout_marginTop="@dimen/_5sdp"
-        tools:src="@drawable/ic_launcher_background"/>
+        android:adjustViewBounds="true"
+        tools:src="@drawable/place_holder"/>
 
 
     <TextView
