place holder image added to the row xml file

--- a/app/src/main/res/layout/row_feed.xml
+++ b/app/src/main/res/layout/row_feed.xml
@@ -37,7 +37,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textTitle"
         android:layout_marginTop="@dimen/_5sdp"
         android:adjustViewBounds="true"
-        tools:src="@drawable/place_holder"/>
+        android:src="@drawable/place_holder"/>
 
 
     <TextView
